--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!--Navigation bar-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light navbar-custom" style="background-color: #941120;">
         <a class="navbar-brand mr-auto" href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="60" alt="CMU IS Logo" loading="lazy">
@@ -59,6 +60,7 @@
         </div>
     </nav>
     <div class="main">
+        <!--Header-->
         <div class="top-section">
             <a title="CMU Hamburg Hall"><img src="assets/header-static.png" /></a>
         </div>
@@ -69,13 +71,15 @@
                 Student teams are committed to delivering high-quality solutions that will make a lasting impact.
                 Get in contact with us now to explore possibilities!</p>
         </div>
-        <div class="statistics">
+        <!--Impact statistics-->
+        <div class="impact">
             <h4>Impact</h4>
             <p>From 2013 to 2023, 140 unique community partners worked with us. 220 project teams have contributed 540
                 student hours and
                 90 faculty advising hours per project - that's 137,500 hours total to the community. 35% of community
                 partners return, and 8 have
                 partnered with us more than 4 times.</p>
+                <!--Donut chart of locations-->
             <div class="container mt-5">
                 <div class="row py-2 d-flex justify-content-center">
                     <div class="col-md-4 col-12 py-1">
@@ -85,6 +89,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--Bubble chart of fields-->
                     <div class="col-md-6 col-12 py-1">
                         <div class="card">
                             <div class="card-body">
@@ -95,10 +100,12 @@
                 </div>
             </div>
         </div>
+        <!--Informational video-->
         <div class="video">
             <h4>Learn more about the program</h4>
             <iframe src="https://drive.google.com/file/d/1L85lT7NXSqkPgneidp0_3NpVnUCv9irz/preview" width="640" height="480" allow="autoplay"></iframe>
-        </div>
+        </div>\
+        <!--CP responsibilities and details of project-->
         <div class="project-details">
             <h4>Project Details</h4>
             <p>Students work with community partners throughout the semester. Partners have various responsibilities
@@ -110,6 +117,7 @@
                 <li>Provide resources for students upon request</li>
             </ul>
             </p>
+            <!--2 column semester project comparison-->
             <div class="timeline-grid">
                 <div class="fall">
                     <h4>Fall Semester</h4>
@@ -131,6 +139,7 @@
                         <li>Teams provide a solution that fits the client's objectives, constraints, and capabilities</li>
                     </ul>
                 </div>
+                <!--Timeline images-->
                 <div id="timeline" class="fall-graphic">
                     <img src="assets/67240 timeline.png">
                 </div>
@@ -142,7 +151,7 @@
             </div>
         </div>
     </div>
-
+    <!--Footer-->
     <footer class="blog-footer">
         <a href="https://www.cmu.edu/information-systems/" target="_blank">
             <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
