fixed gantt diagram alignment

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 90 faculty advising hours per project - that's 137,500 hours total to the community. 35% of community
                 partners return, and 8 have
                 partnered with us more than 4 times.</p>
-                <!--Donut chart of locations-->
+            <!--Donut chart of locations-->
             <div class="container mt-5">
                 <div class="row py-2 d-flex justify-content-center">
                     <div class="col-md-4 col-12 py-1">
@@ -102,9 +102,10 @@
         </div>
         <!--Informational video-->
         <div class="video">
-            <h4>Learn more about the program</h4>
-            <iframe src="https://drive.google.com/file/d/1L85lT7NXSqkPgneidp0_3NpVnUCv9irz/preview" width="640" height="480" allow="autoplay"></iframe>
-        </div>\
+            <h4>Learn More About Our Program</h4>
+            <iframe src="https://drive.google.com/file/d/1L85lT7NXSqkPgneidp0_3NpVnUCv9irz/preview" width="640"
+                height="480" allow="autoplay"></iframe>
+        </div>
         <!--CP responsibilities and details of project-->
         <div class="project-details">
             <h4>Project Details</h4>
@@ -117,37 +118,45 @@
                 <li>Provide resources for students upon request</li>
             </ul>
             </p>
+        </div>
+        <div class="">
             <!--2 column semester project comparison-->
-            <div class="timeline-grid">
-                <div class="fall">
+            <div class="row">
+                <div class="col-md">
                     <h4>Fall Semester</h4>
                     <h6>Mobile Web Design and Development Elective</h6>
                     <ul>
                         <li>This course emphasizes design and user-experience with a web or app interface</li>
-                        <li>Small teams work with partners to solidify a project vision and deliver multiple solution prototypes
+                        <li>Small teams work with partners to solidify a project vision and deliver multiple
+                            solution prototypes
                         </li>
                         <li>Students leverage a user-centered approach to wireframes, client feedback, and prototype
-                            implementation</li>
+                            implementation
+                        </li>
                     </ul>
+                    <img src="assets/67240-timeline.png" class="img-fluid d-md-none" alt="Fall Semester Graphic">
                 </div>
-                <div class="spring">
+                <div class="col-md">
                     <h4>Spring Semester</h4>
                     <h6>Information Systems Consulting Project Capstone</h6>
                     <ul>
                         <li>Small teams develop information system solutions to meet management needs</li>
                         <li>Teams propose, define, design, and implement an application with the project client</li>
-                        <li>Teams provide a solution that fits the client's objectives, constraints, and capabilities</li>
+                        <li>Teams provide a solution that fits the client's objectives, constraints, and
+                            capabilities</li>
                     </ul>
+                    <img src="assets/67373-timeline.png" class="img-fluid d-md-none" alt="Spring Semester Graphic">
                 </div>
-                <!--Timeline images-->
-                <div id="timeline" class="fall-graphic">
-                    <img src="assets/67240 timeline.png">
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <img src="assets/67240-timeline.png" class="img-fluid d-none d-md-block"
+                        alt="Fall Semester Graphic">
                 </div>
-                    
-                <div id="timeline" class="spring-graphic">
-                    <img src="assets/67373 timeline.png">
+                <div class="col-md">
+                    <img src="assets/67373-timeline.png" class="img-fluid d-none d-md-block"
+                        alt="Spring Semester Graphic">
                 </div>
-                
             </div>
         </div>
     </div>
@@ -157,10 +166,10 @@
             <img src="./assets/redesignLogo.png" width="186.6" height="75" alt="CMU IS Logo"></a>
         </a>
         <br>
-        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and Development
-            (67-240) and is maintained by student led effort. <br>
-            Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin Dieringer,
-            Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
+        <p>Acknowledgements: This website is the outcome of a student project in Mobile Web Design and
+            Development (67-240) and is maintained by student led effort. <br>
+            Credits: Website prototyping and development © Amalia Kutin, Evelynn Chen, Leo Hsu (2023), Erin
+            Dieringer, Zoe Feng, Arnav Luthra, Abbey Mui and Pooja Penninti (2015). <br>
             Website maintenance © Stephanie Pang, Samara McCallum, Emmet Mack, Allen Yao, Benjamin Chen, and Chloe Deng.
             <br>
             Faculty advisors: Prof. Sara Moussawi, Prof. Naama Ilany-Tzur, Prof. Larry Heimann, and Prof. Julia
