--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../cmu-is-consulting/tools/nav-bar/navStyles.css">
+    <link rel="stylesheet" href="./tools/nav-bar/navStyles.css">
     <link rel="stylesheet" href="home-page/homepage.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
-    <script src="../cmu-is-consulting/index.js" defer></script>
+    <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../cmu-is-consulting/projects-page/projects.html">Projects <span
+                    <a class="nav-link" href="./projects-page/projects.html">Projects <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -51,7 +51,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../cmu-is-consulting/testimonials-page/testimonials.html">Testimonials</a>
+                    <a class="nav-link" href="./testimonials-page/testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://www.cmu.edu/">Qatar</a>
